2004-05-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (entry_preview): Set "can_focus" to False.

2004-05-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc: Break apart a couple of uber-long lines.

2004-05-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (package_title): New string constant which
	defines the package title string plus surrounding markup.
	(AboutDialog::create): Use the separated package_title constant.

	* src/aboutdialog.{cc,h} (AboutDialog::create): Change the return
	type to std::auto_ptr<Gtk::Dialog> because copying-destroys-source
	is just what we want.   Calling release() to achieve exactly that
	was a silly idea to begin with.

2004-05-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/aboutdialog.glade (label_debian_*): Remove.  The Debian
	package of regexxer is not the only one out there, and I cannot
	list all of them in the about dialog.  Sorry Ross :/
	(label_translator_{what,who}): Give credit to the translator(s)
	for the user's locale as listed in the translation of the string
	"translator-credits".
	(label_url): Get rid of the custom SelectableLabel widget class.
	The only feature provided by the custom widget was tab-navigation
	to labels -- I figured one can simply use C-Tab to do just that.
	(label_author_who): ditto
	(label_translator_who): ditto.

	* src/aboutdialog.cc (SelectableLabel): Remove custom widget.
	(AboutDialog::create): Acommodate to glade file modifications.

2004-05-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (ACLOCAL_AMFLAGS): No need to explicitely specify
	$(top_srcdir)/ in the directory name because the aclocal rule
	changes to that directory anyway.  This also avoids confusing
	recent releases of gettextize.

2004-05-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (CONFIG_STATUS_DEPENDENCIES): AC_SUBST() this
	variable with '$(top_srcdir)/po/LINGUAS' for utmost perfection ;-)
